--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,21 +1,21 @@
-name: Docker
+name: Release
 
 on:
-  push:
-    branches:
-      - master
-      - release-*
-
-  # Run tests for any PRs.
-  pull_request:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: Git tag to build release from
+        required: true
 
 jobs:
-  docker:
+  release-images:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.inputs.tag }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -31,6 +31,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Print Disk Usage
+        run: |
+          df -ah
+          docker buildx du
+
       - name: Login to GitHub Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1 
@@ -39,13 +44,13 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Login to Quay.io
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_ROBOT_TOKEN }}
+      # - name: Login to Quay.io
+      #   if: github.event_name != 'pull_request'
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: quay.io
+      #     username: ${{ secrets.QUAY_USERNAME }}
+      #     password: ${{ secrets.QUAY_ROBOT_TOKEN }}
 
       - name: Docker meta (controller)
         id: controller-meta
@@ -55,7 +60,7 @@ jobs:
             quay.io/argoproj/argo-rollouts
             ghcr.io/argoproj/argo-rollouts
           tags: |
-            type=ref,event=branch
+            type=semver,pattern={{version}}
 
       - name: Docker meta (plugin)
         id: plugin-meta
@@ -65,23 +70,15 @@ jobs:
             quay.io/argoproj/kubectl-argo-rollouts
             ghcr.io/argoproj/kubectl-argo-rollouts
           tags: |
-            type=ref,event=branch
-
-      # avoid building linux/arm64 for PRs since it takes so long
-      - name: Set Platform Matrix
-        id: platform-matrix
-        run: |
-          PLATFORM_MATRIX=linux/amd64
-          if [ ${{ github.event_name != 'pull_request' }} = true ]; then
-            PLATFORM_MATRIX=$PLATFORM_MATRIX,linux/arm64
-          fi
-          echo "::set-output name=platform-matrix::$PLATFORM_MATRIX"
+            type=semver,pattern={{version}}
 
       - name: Build and push (controller-image)
         uses: docker/build-push-action@v2
         with:
-          platforms: ${{ steps.platform-matrix.outputs.platform-matrix }}
-          push: ${{ github.event_name != 'pull_request' }}
+          #platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+          #push: true
+          push: false
           tags: ${{ steps.controller-meta.outputs.tags }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
@@ -90,8 +87,10 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           target: kubectl-argo-rollouts
-          platforms: ${{ steps.platform-matrix.outputs.platform-matrix }}
-          push: ${{ github.event_name != 'pull_request' }}
+          #platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+          #push: true
+          push: false
           tags: ${{ steps.plugin-meta.outputs.tags }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
@@ -103,3 +102,30 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+  release-artifacts:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.inputs.tag }}
+
+      - name: Generate release artifacts
+        run: |
+          make release-plugins
+          make manifests IMAGE_TAG=${{ github.event.inputs.tag }}
+
+      - name: Draft release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.event.inputs.tag }}
+          draft: true
+          files: |
+            dist/kubectl-argo-rollouts-linux-amd64
+            dist/kubectl-argo-rollouts-darwin-amd64
+            manifests/install.yaml
+            manifests/namespace-install.yaml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
