--- a/manifests/crds/rollout-crd.yaml
+++ b/manifests/crds/rollout-crd.yaml
@@ -2784,6 +2784,8 @@ spec:
               currentStepIndex:
                 format: int32
                 type: integer
+              message:
+                type: string
               observedGeneration:
                 type: string
               pauseConditions:
@@ -2799,6 +2801,8 @@ spec:
                   - startTime
                   type: object
                 type: array
+              phase:
+                type: string
               promoteFull:
                 type: boolean
               readyReplicas:
